# Django-Tenants

./: .env  .env.example  ReadMe.md  pyproject.toml
attendance/: settings (copy).py  settings.py
attendance_shared/: admin.py  apps.py  models.py
attendance_shared/migrations/: 0001_initial.py  0002_alter_stores_store_mobile.py  0003_employees_machines_player_player_games_storeusers.py
attendance_tenant/: admin.py  apps.py  models.py
attendance_tenant/migrations/: 0001_initial.py  0002_rename_stores_store.py  0003_alter_store_store_mobile.py  0004_employees_machines_player_player_games_storeusers.py
client/: models.py
client/migrations/: 0001_initial.py
