[tool.poetry]
name = "attendanceproj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-environ = "^0.8.1"
django-multitenant = "^2.4.0"
djangorestframework = "^3.12.4"
django-debug-toolbar = "^3.2.2"
psycopg2-binary = "^2.9.2"
django-tenants = "^3.3.4"
django-tenant-schemas = "^1.11.0"
psycopg2 = "^2.9.2"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
